// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubscriptionCompliancy /> should warn during evaluation period 1`] = `
<Component
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="Your OpenShift evaluation expires in 0 days"
  variant="warning"
>
  <p>
    Your 60-day OpenShift evaluation expires in 0 days. 
    <a
      href="https://www.redhat.com/en/contact"
      rel="noreferrer noopener"
      target="_blank"
    >
      Contact sales
    </a>
     to purchase an OpenShift subscription.
  </p>
</Component>
`;

exports[`<SubscriptionCompliancy /> should warn during evaluation period 2`] = `
<Component
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="Your OpenShift evaluation expires in 0 days"
  variant="warning"
>
  <p>
    Your 60-day OpenShift evaluation expires in 0 days. 
    The cluster owner or an organization administrator can edit subscription settings for non-evaluation use.
  </p>
</Component>
`;

exports[`<SubscriptionCompliancy /> should warn when evaluation is expired 1`] = `
<Component
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="Your 60-day OpenShift evaluation has expired"
  variant="danger"
>
  <p>
    Your cluster is not supported and you may stop receving updates.
     
    <a
      href="https://www.redhat.com/en/contact"
      rel="noreferrer noopener"
      target="_blank"
    >
      Contact sales
    </a>
     to purchase an OpenShift subscription.
     
    <Component
      isInline={true}
      onClick={[Function]}
      variant="link"
    >
      Archive this cluster
    </Component>
     if it no longer exits. 
  </p>
</Component>
`;

exports[`<SubscriptionCompliancy /> should warn when evaluation is expired 2`] = `
<Component
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="Your 60-day OpenShift evaluation has expired"
  variant="danger"
>
  <p>
    Your cluster is not supported and you may stop receving updates.
     
    The cluster owner or an organization administrator can edit subscription settings for non-evaluation use.
  </p>
</Component>
`;
